2006-04-18  Andreas Krebbel  <krebbel1@de.ibm.com>

	* builtins.c (expand_builtin_strcmp): Cover label definition of 
	do_libcall with HAVE_cmpstrnsi.

2006-04-18  Paolo Bonzini  <bonzini@gnu.org>

	PR tree-optimization/26821

	Backport from mainline:

	2006-04-18  Paolo Bonzini  <bonzini@gnu.org>

	PR tree-optimization/26821
	* tree-ssa-math-opts.c (get_constant_one): New.
	(insert_reciprocals): Use it.

	2006-02-02  Paolo Bonzini  <bonzini@gnu.org>
            
	* tree-flow-inline.h (bsi_after_labels): Rewrite, return
	what its name says.
	* lambda-code.c (perfect_nestify): Use bsi_insert_before on
	bsi_after_labels iterator.
	* tree-if-conv.c (find_phi_replacement_condition,
	replace_phi_with_cond_modify_expr): Likewise.
	* tree-scalar-evolution.c (scev_const_prop): Likewise.
	* tree-ssa-loop-ivopts.c (compute_phi_arg_on_exit): Likewise.   

2006-04-18  Alan Modra  <amodra@bigpond.net.au>

	PR middle-end/27095
	* builtins.c (expand_builtin_memset): Stabilize args before expansion
	and emit libcall here in case the builtin fails.
	(expand_builtin_strcmp): Always emit the libcall here on failure.

2006-04-16  Uros Bizjak  <uros@kss-loka.si>

	PR middle-end/27134
	* builtins.c (expand_builtin_int_roundingfn): Use expand_expr()
	to expand fallback builtin function call.

2006-04-14  Alexey Starovoytov  <alexey.starovoytov@sun.com>
            Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sparc.c (emit_and_preserve): Allocate space for the
	register save area.

2006-04-13  Paolo Bonzini  <bonzini@gnu.org>
	    Ulrich Weigand  <uweigand@de.ibm.com>

	PR target/27006
	* config/rs6000/rs6000.h (EASY_VECTOR_15_ADD_SELF): Require n
	to be even.

2006-04-13  Alan Modra  <amodra@bigpond.net.au>

	PR target/26459
	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Don't
	optimize to lo_sum for DFmode if !TARGET_FPRS.

2006-04-07  Jan Hubicka  <jh@suse.cz>

	* ipa-inline.c (cgraph_early_inlining): Collect garbage.
