@@ -5,6 +5,17 @@
 
 2006-04-18  Paolo Bonzini  <bonzini@gnu.org>
 
+        PR tree-optimization/26643
+
+	Backport from mainline:
+	2006-03-29  Zdenek Dvorak <dvorakz@suse.cz>
+
+        PR tree-optimization/26643
+        * tree-ssa-loop-ivopts.c (find_interesting_uses_address): Do not handle
+        bit_field_refs.
+
+2006-04-18  Paolo Bonzini  <bonzini@gnu.org>
+
 	PR tree-optimization/26821
 
 	Backport from mainline:
